social links issue with it not showing up when scrolled up from the bottom fixed

--- a/public/stylesheets/commons.scss
+++ b/public/stylesheets/commons.scss
@@ -81,3 +81,7 @@ body, button, input, optgroup, select, textarea {
   display: flex;
   width: 100%;
 }
+
+.is-fullwidth{
+  width: 100%;
+}
