--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -351,7 +351,7 @@ html {
   }
 
   .social-links {
-    width: 100%;
+    //width: 100%;
     position: fixed;
     display: flex;
     bottom: 5%;
